css/help_center.css
/* ... */
@media screen and (max-width: 800px) {
    .hero-button-image {
        width: 30px !important;
        height: 30px !important;
    }
}

.hero-button-label {
    color: #22408B;
    font-weight: 700;
    font-size: 15px;
    margin: 0px 0px 5px 0px;
    text-overflow: ellipsis;
    overflow: hidden; 
    white-space: nowrap;
}
@media screen and (min-width: 800px) and (max-width: 1400px) {
    .hero-button-label {
        font-weight: 600;
        font-size: 13px;
    }
}
@media screen and (max-width: 800px) {
    .hero-button-label {
        font-weight: 600;
        font-size: 11px;
    }
}

.icon-button {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.icon-button>* {
    flex: none;
}




#product-grid-title {
    margin-top: 50px;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 38px;
    font-weight: 500;
    color: #000;
    text-overflow: ellipsis;
    overflow: hidden; 
    white-space: nowrap;
}
@media screen and (max-width: 800px) {
    #product-grid-title {
        margin: 30px 10px 0px 15px;
        font-size: 19px;
    }
}


#product-grid {
    width: 90%;
    max-width: 1000px;
    margin-top: 25px;
    margin: 25px auto 50px auto;
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}
@media screen and (min-width: 1000px) and (max-width: 1400px) {
    #product-grid {
      width: 90%;
      max-width: 1000px;
      margin-top: 20px;
    }
}
@media screen and (max-width: 1000px) {
    #product-grid {
      width: 90%;
      max-width: 450px;
      margin-top: 20px;
    }
}
@media screen and (max-width: 400px) {
    #product-grid {
      width: 97%;
      max-width: 450px;
      margin-top: 10px;
    }
}


/* Create four equal columns that sit next to each other */
.column {
    flex: 25%;
    max-width: 25%;
    padding: 10px;
}
/* Use two columns for a smaller screen */
@media screen and (max-width: 1000px) {
    .column {
      flex: 50%;
      max-width: 50%;
    }
}

.grid-item {
    vertical-align: middle;
    width: 100%;
    cursor: pointer;
}

.product-grid-item {
    border: 1px #000 solid;
    border-radius: 8px;
}

.product-grid-item:hover, .product-grid-item:active {
    background-color: #b0b0b0;
}

.modal {
    overflow: hidden;
}

.modal-dialog {
    width: 85%;
}

.modal-content {
    background: white;
    max-height: 80vh;
}

.modal-body {
    padding: 0px;
}

#modal-close-button {
    background: none;
    border: none;
    position: absolute;
    z-index: 1;
    top: 8px;
    right: 8px;
    color: #777;
    outline: none;
}

#modal-close-button img {
    width: 27px;
    height: 27px;
}

#modal-title {
    text-align: center;
    padding-top: 60px;
    margin: 0 15px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 25px;
    font-weight: 500;
}
@media screen and (min-width: 465px) and (max-width: 800px) {
    #modal-title {
        font-size: 24px;
    }
}
@media screen and (max-width: 465px) {
    #modal-title {
        font-size: 18px;
    }
}
@media screen and (max-width: 360px) {
    #modal-title {
        font-size: 16px;
    }
}

.bold-product-name {
    font-weight: 700;
    color: #000000;
}

#platform-grid {
    max-width: 90%;
    margin-top: 25px;
    margin: 25px auto 50px auto;
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}
@media screen and (min-width: 400px) and (max-width: 1000px) {
    #platform-grid {
        max-width: 75%;
    }
}

.platform-button {
    width: 100%;
    border: 1px #000 solid;
    border-radius: 8px;
    background: none;
}

.platform-button:hover, .platform-button:active {
    background-color: #b0b0b0;
}

.platform-button-image {
    width: 70px !important;
    height: 70px !important;
    margin: 12px 6px 6px 6px;
}
@media screen and (max-width: 550px) {
    .platform-button-image {
        width: 50px !important;
        height: 50px !important;
    }
}

.platform-button-label {
    color: #333;
    font-weight: 700;
    font-size: 18px;
    margin: 0px 0px 5px 0px;
}
 @media screen and (max-width: 550px) {
    .platform-button-label {
        font-size: 13px;
    }
}




/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " ";
    /* 1 */
    display: table;
    /* 2 */
}

.clearfix:after {
    clear: both;
}
/* ... */

